docs/2.0.0/_sources/deployment/update-fpt.md.txt
# AMR Updating FPT Image in Flash

After running the amr\_install.sh script, the files required to update the OSPI flash image can be found in the /opt/amd/amr/\<VBNV\>\*/flash\_setup/ directory.

An update of the FPT table requires that the fpt\_setup\_\<VBNV\>\_\<Release\>.pdi be written to flash via JTAG using the AMD Vivado™ hardware manager using the following steps.

**1)** Stop the AMI application using the following command.

**Note**: Before updating the FPGA image over JTAG, it is important to stop any communication between AMI (on the Host) and AMC (on the Card).

    $ sudo rmmod ami

Only after stopping AMI is it safe to change the device image over JTAG.

**2)** If not done so, connect V80 card to the host running Vivado using micro-USB cable and start the application.

Select Open Hardware Manager

[![image-20250818-150233.png](../images/1107373915.png)](../images/1107373915.png)

**3)** Select Open Target to connect to the AMD Alveo™ card you want to target.

[![image1](../images/1107373873.png)](../images/1107373873.png)

**4)** A list of available devices will be displayed in the hardware window. Right click on the device you wish to target (e.g. xcv80\_1 when using the V80 card).

Select Add Configuration Memory Device

[![image2](../images/1107373891.png)](../images/1107373891.png)

**5)** Select the appropriate Configuration Memory Part. Reference the following table to determine the applicable Memory part for the target Alveo card.

| Alveo Card | Configuration Memory Part  | Type | Density (Mb) |
| ---- | ---------- | -- | ---- |
| V80        | cfgmem-2048-ospi-x8-single | ospi | 2048         |

[![image-20250818-151846.png](../images/1107373912.png)](../images/1107373912.png)

Select OK when asked if you want to program the configuration memory device now.

[![image3](../images/1107373876.png)](../images/1107373876.png)

**6)** Select the the fpt\_setup pdi from the /opt/amd/amr/\<VBNV\>\*/flash\_setup/ directory as the configuration PDI and select the the initialization pdi from the same /opt/amd/amr/\<VBNV\>\*/flash\_setup/ directory as the Initialization PDI.

It is recommended that the Entire Configuration Memory Device option is selected from the Program Operations → Address Range Drop down menu, so that the flash memory is in a known state after FPT setup PDI update.

[![image-20250818-152246.png](../images/1107373918.png)](../images/1107373918.png)

**Note:** In the Configuration File field, browse to and select the path to **amr\_ospi\_fpt.bin** file (typically located in /opt/amd/amr/\<VBNV\>\*/flash\_setup/ directory).

Upon clicking OK, the initialization PDI is downloaded to the FPGA and used to transfer the Configuration PDI into the OSPI Flash Memory.

**Tip:** If the flash partition table is modified from the AMR example (e.g. if **fw/AMC/scripts/fpt.json** is modified), a new FPT Setup PDI is generated by the AMR build flow to be programmed to OSPI.

**7)** When Finished, Hardware Manager will report that Flash Programming has completed successfully.

[![image4](../images/1107373867.png)](../images/1107373867.png)

**8)** It is now necessary to perform a **cold reboot** of the Host server in order to boot the new design from flash.

**9)** When the restart has completed, verification that the update has completed correctly can be done by running the **ami\_tool overview** command.

Note - if the ami\_tool reports AMC other than READY then it is highly advised not to run cfgmem\_program commands. This is most likely due to either a) something went wrong with the FPT update, or b) the wrong PDI was used for the FPT update.

See [/wiki/spaces/XPS/pages/1093308807](../../deployment/ami-tool-guide#overview2overview) for more more information on the different AMC states.

    ami_tool overview
    
    
     AMI
    ---------------------------------------------------------
    Version        | 2.0.0  (0)
    Branch
    Hash           | b3851ec2d223e6c35e567e245dc380049d2ba139
    Hash Date      | 20260226
    Driver Version | 2.0.0  (0)


    BDF     | Device        | UUID                             | AMC        | State
    -------------------------------------------------------------------------------
    c1:00.0 | ALVEO V80 INT | 00000000000000000000000014862935 | 2.0.0  (0) | READY


